Fix Mini Cart drawer close button alignment

--- a/assets/js/base/components/drawer/style.scss
+++ b/assets/js/base/components/drawer/style.scss
@@ -118,7 +118,8 @@ $drawer-width-mobile: 100vw;
 		background: transparent;
 		color: inherit;
 		position: absolute;
-		right: 0;
+		// The SVG has some white spacing around, thus we have to set this magic number.
+		right: 8px;
 		top: 0;
 		// Increase clickable area.
 		padding: 1em;
